# fastapi-sample

./: .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
portal/: main.py
portal/modules/core/: config.py  router.py  security.py  test.py
portal/modules/postgres/: database.py
portal/modules/user/: schema.py  test.py
