[tool.poetry]
name = "portal"
version = "0.1.0"
description = ""
authors = ["linh <linh@missingcorner.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.105.0"
uvicorn = "^0.24.0.post1"


[tool.poetry.group.dev.dependencies]
black = "^23.12.0"
pylint = "^3.0.3"
pytest = "^7.4.3"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
start = "portal.main:start"
